objects/Milestone_Documentation__c.object
<CustomObject>
    <description>Documentation uploaded by grant recipients to prove milestone completion for next funding tranche</description>
    <label>Milestone Documentation</label>
    <nameField>
        <displayFormat>MSDOC-{000000}</displayFormat>
        <label>Documentation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Documentation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    
    <!-- Relationship to Project Milestone (Master-Detail: C-4 fix) -->
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <label>Project Milestone</label>
        <referenceTo>Project_Milestone__c</referenceTo>
        <relationshipLabel>Milestone Documentation</relationshipLabel>
        <relationshipName>Milestone_Documentation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    
    <!-- Document Information -->
    <fields>
        <fullName>Document_Title__c</fullName>
        <label>Document Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Progress Report</fullName>
                    <default>true</default>
                    <label>Progress Report</label>
                </value>
                <value>
                    <fullName>Financial Report</fullName>
                </value>
                <value>
                    <fullName>Receipts and Invoices</fullName>
                </value>
                <value>
                    <fullName>Photos and Media</fullName>
                </value>
                <value>
                    <fullName>Beneficiary Testimonials</fullName>
                </value>
                <value>
                    <fullName>Third Party Verification</fullName>
                </value>
                <value>
                    <fullName>Impact Metrics</fullName>
                </value>
                <value>
                    <fullName>Completion Certificate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <label>File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ContentVersion_ID__c</fullName>
        <label>ContentVersion ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <label>Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Uploaded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Uploaded_Milestone_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <!-- Review Status -->
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                    <default>true</default>
                    <label>Pending Review</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Needs Revision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviewed_Milestone_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <label>Review Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revision_Request__c</fullName>
        <label>Revision Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>